Add currency popularity
