# api/src/main/kotlin/dev/voir/sole/world/api/currency/CurrencyRestMapper.kt
@@ -32,6 +32,7 @@ fun CurrencyData.toRest(
     isoNumeric = isoNumeric,
     name = name,
     decimalDigits = decimalDigits,
+    popularity = popularity,
     obsolete = obsolete,
     nativeName = nativeName,
     description = description,
